products change pvt

--- a/src/config.json
+++ b/src/config.json
@@ -64,7 +64,7 @@
   ],
   "headerLinks": [
     {
-      "menuLabel": "Shop",
+      "menuLabel": "Products",
       "menuLink": "/shop",
       "category": [
         {
